src/objects/User.object
<CustomObject>
    <fields>
        <fullName>AccaPPtYPE__c</fullName>
        <label>备件审批发起类型</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>工程师</fullName>
                </value>
                <value>
                    <fullName>主管和技术专家</fullName>
                </value>
                <value>
                    <fullName>助理</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DB_Region__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <label>DB Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                    <color>#009900</color>
                    <label>NA</label>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                    <color>#3333FF</color>
                    <label>EMEA</label>
                </value>
                <value>
                    <fullName>APAC</fullName>
                    <color>#CC6600</color>
                    <label>APAC</label>
                </value>
                <value>
                    <fullName>LA</fullName>
                    <color>#990000</color>
                    <label>LA</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DirectSupervisor__c</fullName>
        <label>直属领导</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmployeeType__c</fullName>
        <label>员工类型</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>性别</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>男</fullName>
                </value>
                <value>
                    <fullName>女</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LfourDepartment__c</fullName>
        <label>四级部门</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NCNumber__c</fullName>
        <inlineHelpText>人力提供的员工编号</inlineHelpText>
        <label>NC员工编号</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberLeader__c</fullName>
        <label>直属领导人员编号</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimarySector__c</fullName>
        <label>一级部门</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RoleName__c</fullName>
        <formula>UserRole.Name</formula>
        <label>#角色名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>角色</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Formula__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SFDC Formula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SecondarySector__c</fullName>
        <label>二级部门</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TertiarySector__c</fullName>
        <label>三级部门</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <sharingModel>Read</sharingModel>
</CustomObject>